// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Product Multi-Dimensional schematics: ng-add list feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { ProductMultiDimensionalListRootModule } from "@spartacus/product-multi-dimensional/list/root";

@NgModule({
  declarations: [],
  imports: [
    ProductMultiDimensionalListRootModule
  ]
})
export class ProductMultiDimensionalListFeatureModule { }
"
`;

exports[`Spartacus Product Multi-Dimensional schematics: ng-add list feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:pipe": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            }
          }
        }
      }
    }
  }
}"
`;

exports[`Spartacus Product Multi-Dimensional schematics: ng-add selector feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { ProductMultiDimensionalSelectorModule } from "@spartacus/product-multi-dimensional/selector";
import { multiDimensionalSelectorTranslationChunksConfig, multiDimensionalSelectorTranslationsEn } from "@spartacus/product-multi-dimensional/selector/assets";
import { ProductMultiDimensionalSelectorRootModule } from "@spartacus/product-multi-dimensional/selector/root";

@NgModule({
  declarations: [],
  imports: [
    ProductMultiDimensionalSelectorRootModule,
    ProductMultiDimensionalSelectorModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: multiDimensionalSelectorTranslationsEn },
      chunks: multiDimensionalSelectorTranslationChunksConfig,
    },
  })]
})
export class ProductMultiDimensionalSelectorFeatureModule { }
"
`;

exports[`Spartacus Product Multi-Dimensional schematics: ng-add selector feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { multiDimensionalSelectorTranslationChunksConfig, multiDimensionalSelectorTranslationsEn } from "@spartacus/product-multi-dimensional/selector/assets";
import { PRODUCT_MULTI_DIMENSIONAL_SELECTOR_FEATURE, ProductMultiDimensionalSelectorRootModule } from "@spartacus/product-multi-dimensional/selector/root";

@NgModule({
  declarations: [],
  imports: [
    ProductMultiDimensionalSelectorRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [PRODUCT_MULTI_DIMENSIONAL_SELECTOR_FEATURE]: {
        module: () =>
          import('@spartacus/product-multi-dimensional/selector').then((m) => m.ProductMultiDimensionalSelectorModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: multiDimensionalSelectorTranslationsEn },
      chunks: multiDimensionalSelectorTranslationChunksConfig,
    },
  })
  ]
})
export class ProductMultiDimensionalSelectorFeatureModule { }
"
`;

exports[`Spartacus Product Multi-Dimensional schematics: ng-add selector feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/product-multi-dimensional";
@import "@spartacus/styles/vendor/bootstrap/scss/functions";
@import "@spartacus/styles/vendor/bootstrap/scss/variables";
@import "@spartacus/styles/vendor/bootstrap/scss/_mixins";
"
`;

exports[`Spartacus Product Multi-Dimensional schematics: ng-add selector feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:pipe": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/product-multi-dimensional.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/product-multi-dimensional.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
